--- a/website/checkout.html
+++ b/website/checkout.html
@@ -2,59 +2,50 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Checkout | Bumble & Yarn</title>
+  <title>Checkout</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-  <!-- Header -->
-  <header class="header">
-    <img src="logo.png" alt="Bumble & Yarn Logo" class="logo">
-    <h1>Bumble & Yarn</h1>
-  </header>
+<header class="header">
+  <h1>Your Basket</h1>
+</header>
 
-  <!-- Checkout Content -->
-  <main class="checkout-page">
-    <h2>Checkout</h2>
+<main id="basket"></main>
 
-    <div id="checkout-items"></div>
-    <div id="checkout-total"></div>
+<script>
+const basket = JSON.parse(localStorage.getItem('basket')) || [];
+const container = document.getElementById('basket');
 
-    <button class="checkout-btn">Place Order</button>
-  </main>
+let total = 0;
 
-  <!-- Checkout Script -->
-  <script>
-    const basket = JSON.parse(localStorage.getItem("basket")) || [];
+if (basket.length === 0) {
+  container.innerHTML = "<p>Nothing to buy</p>";
+} else {
+  basket.forEach((item, index) => {
+    total += item.price;
+    container.innerHTML += `
+      <div class="basket-item">
+        <img src="${item.image}">
+        <div>
+          <strong>${item.name}</strong><br>
+          Color: ${item.color}<br>
+          ${item.priceText}
+        </div>
+        <button onclick="removeItem(${index})">🗑️</button>
+      </div>
+    `;
+  });
 
-    const itemsDiv = document.getElementById("checkout-items");
-    const totalDiv = document.getElementById("checkout-total");
+  container.innerHTML += `<h2>Total: £${total.toFixed(2)}</h2>`;
+}
 
-    if (basket.length === 0) {
-      itemsDiv.innerHTML = "<p>Nothing to buy</p>";
-      totalDiv.innerHTML = "";
-    } else {
-      let total = 0;
-
-      basket.forEach(item => {
-        total += item.priceValue;
-
-        itemsDiv.innerHTML += `
-          <div class="checkout-item">
-            <img src="${item.image}" alt="${item.name}">
-            <div>
-              <strong>${item.name}</strong><br>
-              Price: ${item.priceText}<br>
-              Color: ${item.color}
-            </div>
-          </div>
-        `;
-      });
-
-      totalDiv.innerHTML = `<h3>Total: £${total.toFixed(2)}</h3>`;
-    }
-  </script>
+function removeItem(i) {
+  basket.splice(i, 1);
+  localStorage.setItem('basket', JSON.stringify(basket));
+  location.reload();
+}
+</script>
 
 </body>
 </html>
