--- a/website/index.html
+++ b/website/index.html
@@ -14,12 +14,7 @@
 
   <nav class="nav">
     <a href="index.html">Home</a>
-    <div class="dropdown">
-      <button class="dropbtn">Shop</button>
-      <div class="dropdown-content">
-        <a href="products.html">Coasters</a>
-      </div>
-    </div>
+    <a href="products.html">Shop</a>
     <a href="checkout.html">Checkout</a>
   </nav>
 </header>
