--- a/website/checkout.html
+++ b/website/checkout.html
@@ -4,48 +4,13 @@
   <meta charset="UTF-8">
   <title>Checkout</title>
   <link rel="stylesheet" href="style.css">
+  <script defer src="checkout.js"></script>
 </head>
 <body>
 
-<header class="header">
-  <h1>Your Basket</h1>
-</header>
-
-<main id="basket"></main>
-
-<script>
-const basket = JSON.parse(localStorage.getItem('basket')) || [];
-const container = document.getElementById('basket');
-
-let total = 0;
-
-if (basket.length === 0) {
-  container.innerHTML = "<p>Nothing to buy</p>";
-} else {
-  basket.forEach((item, index) => {
-    total += item.price;
-    container.innerHTML += `
-      <div class="basket-item">
-        <img src="${item.image}">
-        <div>
-          <strong>${item.name}</strong><br>
-          Color: ${item.color}<br>
-          ${item.priceText}
-        </div>
-        <button onclick="removeItem(${index})">🗑️</button>
-      </div>
-    `;
-  });
-
-  container.innerHTML += `<h2>Total: £${total.toFixed(2)}</h2>`;
-}
-
-function removeItem(i) {
-  basket.splice(i, 1);
-  localStorage.setItem('basket', JSON.stringify(basket));
-  location.reload();
-}
-</script>
+<h1>Checkout</h1>
+<div id="checkout-items"></div>
+<h2 id="total"></h2>
 
 </body>
 </html>
