--- a/website/index.html
+++ b/website/index.html
@@ -4,22 +4,27 @@
   <meta charset="UTF-8">
   <title>Bumble & Yarn</title>
   <link rel="stylesheet" href="style.css">
+  <script defer src="products.js"></script>
 </head>
 <body>
 
 <header class="header">
-  <img src="logo.jpg" alt="Bumble & Yarn Logo" class="logo">
+  <img src="logo.jpg" class="logo">
   <h1>Bumble & Yarn</h1>
-  <p class="tagline">Handmade crochet items made with love 🧶</p>
+  <p class="tagline">Crochet items made with love</p>
 
-  <nav class="nav">
+  <nav>
     <a href="index.html">Home</a>
     <a href="products.html">Shop</a>
     <a href="checkout.html">Checkout</a>
   </nav>
 </header>
 
-<a href="checkout.html" class="basket-icon">🛒</a>
+<a href="checkout.html" class="basket">🧺</a>
+
+<main class="home">
+  <h2>Welcome to Bumble & Yarn</h2>
+</main>
 
 </body>
 </html>
