--- a/website/checkout.html
+++ b/website/checkout.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <title>Checkout</title>
   <link rel="stylesheet" href="style.css">
-  <script defer src="checkout.js"></script>
+  <script defer src="products.js"></script>
 </head>
 <body>
 
 <h1>Checkout</h1>
-<div id="checkout-items"></div>
+<div id="basket-items"></div>
 <h2 id="total"></h2>
 
 </body>
