--- a/website/checkout.html
+++ b/website/checkout.html
@@ -8,9 +8,15 @@
 </head>
 <body>
 
-<h1>Checkout</h1>
+<h1>Your Basket</h1>
+
 <div id="basket-items"></div>
 <h2 id="total"></h2>
+
+<!-- ✅ CHECKOUT BUTTON -->
+<button id="finalCheckout" onclick="location.href='payment.html'">
+  Checkout
+</button>
 
 </body>
 </html>
