--- a/website/index.html
+++ b/website/index.html
@@ -19,23 +19,19 @@
   </nav>
 </header>
 
-<!-- CATEGORY FILTER -->
 <section class="categories">
-  <select id="categoryFilter" onchange="filterCategory()">
-    <option value="all">All Categories</option>
-    <option value="coasters">Coasters</option>
-    <option value="cactus">Cactus</option>
+  <select>
+    <option>All Categories</option>
+    <option>Coasters</option>
+    <option>Cactus</option>
   </select>
 </section>
 
-<!-- WELCOME TEXT UNDER CATEGORIES -->
 <section class="welcome">
   <h2>Welcome to Bumble & Yarn</h2>
 </section>
 
-<!-- BASKET ICON -->
 <a href="checkout.html" class="basket-icon">🛒</a>
 
-<script src="products.js"></script>
 </body>
 </html>
