--- a/website/products.html
+++ b/website/products.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bumble & Yarn</title>
+  <title>Shop | Bumble & Yarn</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,7 +10,6 @@
 <header>
   <img src="logo.jpg" class="logo">
   <h1>Bumble & Yarn</h1>
-  <p>Crochet items made with love</p>
 
   <nav>
     <a href="index.html">Home</a>
@@ -19,19 +18,18 @@
   </nav>
 </header>
 
-<section class="categories">
-  <select>
-    <option>All Categories</option>
-    <option>Coasters</option>
-    <option>Cactus</option>
+<div class="categories">
+  <select id="categoryFilter">
+    <option value="all">All Categories</option>
+    <option value="coasters">Coasters</option>
+    <option value="cactus">Cactus</option>
   </select>
-</section>
+</div>
 
-<section class="welcome">
-  <h2>Welcome to Bumble & Yarn</h2>
-</section>
+<div class="products" id="products"></div>
 
 <a href="checkout.html" class="basket-icon">🛒</a>
 
+<script src="products.js"></script>
 </body>
 </html>
