--- a/website/checkout.html
+++ b/website/checkout.html
@@ -1,22 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Checkout</title>
+  <title>Checkout | Bumble & Yarn</title>
   <link rel="stylesheet" href="style.css">
-  <script defer src="products.js"></script>
 </head>
 <body>
 
-<h1>Your Basket</h1>
+<header>
+  <img src="logo.jpg" class="logo">
+  <h1>Checkout</h1>
 
-<div id="basket-items"></div>
-<h2 id="total"></h2>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="products.html">Shop</a>
+    <a href="checkout.html">Checkout</a>
+  </nav>
+</header>
 
-<!-- ✅ CHECKOUT BUTTON -->
-<button id="finalCheckout" onclick="location.href='payment.html'">
-  Checkout
-</button>
+<div class="checkout" id="checkout"></div>
+
+<script>
+function renderCheckout() {
+  const container = document.getElementById("checkout");
+  const basket = JSON.parse(localStorage.getItem("basket")) || [];
+  container.innerHTML = "";
+
+  if (basket.length === 0) {
+    container.innerHTML = "<p>Your basket is empty.</p>";
+    return;
+  }
+
+  basket.forEach((item, index) => {
+    const div = document.createElement("div");
+    div.className = "checkout-item";
+    div.innerHTML = `
+      <span>${item.name} — £${item.price.toFixed(2)}</span>
+      <button onclick="removeItem(${index})">🗑️</button>
+    `;
+    container.appendChild(div);
+  });
+}
+
+function removeItem(index) {
+  const basket = JSON.parse(localStorage.getItem("basket")) || [];
+  basket.splice(index, 1);
+  localStorage.setItem("basket", JSON.stringify(basket));
+  renderCheckout();
+}
+
+renderCheckout();
+</script>
 
 </body>
 </html>
