--- a/website/checkout.html
+++ b/website/checkout.html
@@ -20,6 +20,8 @@
 
 <div class="checkout" id="checkout"></div>
 
+<a href="payment.html" class="checkout-button">Proceed to Checkout</a>
+
 <script>
 function renderCheckout() {
   const container = document.getElementById("checkout");
