--- a/website/payment.html
+++ b/website/payment.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Payment | Bumble & Yarn</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+  <header class="site-header">
+    <img src="logo.jpg" alt="Bumble & Yarn Logo" class="logo">
+    <h1>Bumble & Yarn</h1>
+    <p class="tagline">Crochet items made with love</p>
+
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="products.html">Shop</a>
+      <a href="checkout.html">Checkout</a>
+    </nav>
+  </header>
+
+  <main class="payment-page">
+    <h2>Payment</h2>
+
+    <p>
+      This is where secure payment will be added.
+    </p>
+
+    <p>
+      Payments will be handled safely using <strong>Stripe</strong>.
+    </p>
+
+    <p style="margin-top: 30px;">
+      🚧 Payment setup coming soon.
+    </p>
+
+    <a href="checkout.html" class="button" style="margin-top: 30px; display: inline-block;">
+      Back to Checkout
+    </a>
+  </main>
+
+</body>
+</html>
